objects/Scrum_Team__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <label>Product Area</label>
        <picklist>
            <picklistValues>
                <fullName>Core - Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSS - Knowledge Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform - Administration &amp; Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform - Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform - AppExchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform - Application Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform - Application Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform - Appstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFA - Forecasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFA - Calendar &amp; Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFA - Pipeline Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/SFGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Clients</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Division__c</fullName>
        <label>Product Division</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <controllingField>Product_Division__c</controllingField>
            <picklistValues>
                <fullName>ADN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppExchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV &amp; IT App Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Networks - Partner Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Networks - S2S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UI and Application Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>www</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Links__c</fullName>
        <formula>HYPERLINK(&quot;/a01?rlid=00NT0000000qYTU&amp;id=&quot; &amp;  Id , &quot;Product Backlog&quot; , &quot;_top&quot;)  &amp; &quot; &quot; &amp; 
HYPERLINK(&quot;/a03?rlid=00NT0000000qYTo&amp;id=&quot; &amp;  Id , &quot;Sprints&quot; , &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Links</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollup_Reporting_Group__c</fullName>
        <label>Rollup Reporting Group</label>
        <picklist>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppStore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Business Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service &amp; Support</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Scrum_Meeting_Time_Location__c</fullName>
        <inlineHelpText>The time and location of the team&apos;s scrum meeting. Include dial-in #, if applicable.</inlineHelpText>
        <label>Scrum Meeting Time/Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Views__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=00bT0000000ebwl&amp;eid=&quot; &amp; Id &amp; &quot;&amp;ic=1&amp;scontrolCaching=1&quot;, &quot;Prioritization&quot; ,&quot;_top&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=00bT0000000ebwn&amp;eid=&quot; &amp; Id &amp; &quot;&amp;ic=1&amp;scontrolCaching=1&quot;, &quot;Sprint Assignment&quot; ,&quot;_top&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=00bT0000000ecls&amp;eid=&quot; &amp; Id &amp; &quot;&amp;ic=1&amp;scontrolCaching=1&quot;, &quot;Theme Assignment&quot; ,&quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Views</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story_Point_Scale__c</fullName>
        <defaultValue>&quot;1,2,4,8,16,24,32,40,60&quot;</defaultValue>
        <inlineHelpText>Enter the estimated hours scale your team uses. This field must be a number comma separated list.</inlineHelpText>
        <label>Estimated Hours Scale</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Email_Group_ID__c</fullName>
        <label>Team Email Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Queue_ID__c</fullName>
        <label>Team Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Queue__c</fullName>
        <formula>HYPERLINK(&quot;p/own/Queue/d?id=&quot; &amp; Team_Queue_ID__c ,  Name &amp; &quot; Scrum Team&quot;)</formula>
        <label>Team Queue</label>
        <type>Text</type>
    </fields>
    <label>Scrum Team</label>
    <nameField>
        <label>Scrum Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scrum Teams</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>No_Ampersand_in_names</fullName>
        <active>true</active>
        <description>We want to make sure that teams don&apos;t use &amp; in names because it breaks certain reports where team name is used in the URL for the scontrol</description>
        <errorConditionFormula>CONTAINS(Name, &apos;&amp;&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Scrum Team name cannot contain &quot;&amp;&quot;, please use &quot;and&quot; instead</errorMessage>
    </validationRules>
</CustomObject>